@@ -5,7 +5,11 @@ ocaml (3.10.0-7) UNRELEASED; urgency=low
     bug 4375
   * don't ignore make clean error
 
- -- Sylvain Le Gall <gildor@debian.org>  Fri, 31 Aug 2007 01:27:19 +0200
+  [ Stefano Zacchiroli ]
+  * CDBS class
+    - add support for specifying the target dir for generated documentation
+
+ -- Stefano Zacchiroli <zack@debian.org>  Fri, 31 Aug 2007 11:23:46 +0200
 
 ocaml (3.10.0-6) unstable; urgency=low
 
